--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+  "start": "node backend/server.js",
+  "dev": "nodemon backend/server.js",
+  "build": "echo 'EJS project - no build needed'"
+},
   "dependencies": {
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
@@ -15,6 +16,7 @@
     "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "mongoose": "^8.20.0",
     "uuid": "^13.0.0"
